--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,17 @@
 </head>
 <body>
     <h1>Slaying on this setup!</h1>
+    <div class="form">
+            <div class="username">
+              <input id="username" type="text" placeholder="USERNAME"/>
+            </div>
+            <div class="password">
+              <input id="password" type="text" placeholder="PASSWORD"/>
+            </div>
+            <div class="login">
+              <span>log in</span>
+            </div>
+          </div>
 
 </body>
 </html>
