--- a/static/jsonform-trial.html
+++ b/static/jsonform-trial.html
@@ -1,20 +1,20 @@
 <!DOCTYPE HTML> 
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
+    <meta charset ="utf-8" />
+    <link rel="stylesheet" type="text/css" href="library/jsonform/deps/opt/bootstrap.css" />
+    <script type="text/javascript" src="library/jsonform/deps/jquery.min.js"></script>
+    <script type="text/javascript" src="library/jsonform/deps/underscore.js"></script>
     <script type="text/javascript" src="/library/jsonform/lib/jsonform.js"></script>
     <script type="text/javascript" src="/library/jsonform/deps/opt/jsv.js"></script>
     <script type="text/javascript" src="bootstrap.js"></script>
     <title>Slay</title>
 </head>
 <body>
-    <form id='test-form'></form>
-
+  <form></form>
+  <div id="res" class="alert"></div>
     <script type="text/javascript">
-        $('#test-form').jsonForm({
+        $('form').jsonForm({
           schema: {
             name: {
               type: 'string',
@@ -37,7 +37,6 @@
             }
           }
         });
-        console.log(form_element);
-      </script>
+    </script>
 </body>
 </html>
