--- a/static/form.html
+++ b/static/form.html
@@ -17,32 +17,8 @@
     </style>
 </head>
 <body>
-  <form></form>
+  <form id="target"></form>
   <div id="res" class="alert"></div>
-    <script type="text/javascript">
-        $('form').jsonForm({
-          schema: {
-            name: {
-              type: 'string',
-              title: 'Name',
-              required: true
-            },
-            age: {
-              type: 'number',
-              title: 'Age'
-            }
-          },
-          onSubmit: function (errors, values) {
-            if (errors) {
-              $('#res').html('<p>I beg your pardon?</p>');
-            }
-            else {
-              $('#res').html('<p>Hello ' + values.name + '.' +
-                (values.age ? '<br/>You are ' + values.age + '.' : '') +
-                '</p>');
-            }
-          }
-        });
-    </script>
+  <script type="text/javascript" src="form.js"></script>
 </body>
 </html>
